--- a/AnySqlParserTest/AnySqlParserTest.csproj
+++ b/AnySqlParserTest/AnySqlParserTest.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AnySqlParser\AnySqlParser.csproj" />
+  </ItemGroup>
+
 </Project>
