--- a/AnySqlParserTest/AnySqlParserTest.csproj
+++ b/AnySqlParserTest/AnySqlParserTest.csproj
@@ -26,4 +26,10 @@
     <ProjectReference Include="..\AnySqlParser\AnySqlParser.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="sql-server-samples\sampleDB1.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
